fix zoomed in width bug on mobile

--- a/reset.css
+++ b/reset.css
@@ -45,6 +45,8 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-html *{
+html, body *{
+    overflow-x: hidden;
 	font-family: sans-serif;
+	max-width: 100%;
 }
